Finished fun facts and got rid of some unnecessary parts of the code

--- a/index.html
+++ b/index.html
@@ -154,61 +154,6 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                 </div>
             </section>
 
-
-            <section id="counter" class="counter">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="main_counter_area text-center">
-
-                                <div class="row">
-                                    <div class="single_counter border_right">
-                                        <div class="col-sm-3 col-xs-12">
-                                            <div class="single_counter_item">
-                                                <h2 class="statistic-counter">42</h2>
-                                                <h3>members</h3>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="single_counter">
-                                        <div class="col-sm-3 col-xs-12">
-                                            <div class="single_counter_item">
-                                                <h2 class="statistic-counter">123</h2>
-                                                <h3>members</h3>
-                                            </div>
-
-                                        </div>
-                                    </div>
-
-                                    <div class="single_counter">
-                                        <div class="col-sm-3 col-xs-12">
-                                            <div class="single_counter_item">
-                                                <h2 class="statistic-counter">15</h2>
-                                                <h3>members</h3>
-                                            </div>
-
-                                        </div>
-                                    </div>
-
-                                    <div class="single_counter">
-                                        <div class="col-sm-3 col-xs-12">
-                                            <div class="single_counter_item">
-                                                <h2 class="statistic-counter">99</h2>
-                                                <h3>members</h3>
-                                            </div>
-
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-
-
             <section id="service" class="service">
                 <div class="container">
                     <div class="row">
@@ -316,6 +261,62 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
             </section>
 
 
+
+
+            <section id="comment" class="comment">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <div class="main_comment sections">
+                                <div class="main_comment_content">
+                                    <div class="single_comment">
+                                        <div class="row">
+                                            <div class="col-sm-8 col-sm-offset-2">
+                                                <div class="single_comment_image_left">
+                                                    <img src="assets/images/comment.png" alt="" />
+                                                </div>
+                                                <div class="single_comment_content_right">
+                                                    <p class="robotolight">“One rather obscure way to reduce your dietary carbon footprint is to avoid purchasing air-freighted food products. These products can be responsible for 50 times more CO2eq emissions than their boat-transported counterparts.”</p>
+                                                    <a href="https://ourworldindata.org/food-choice-vs-eating-local"><h4><span class="separator4"></span> ourworldindata.org</h4></a>
+
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="single_comment">
+                                        <div class="row">
+                                            <div class="col-sm-8 col-sm-offset-2">
+                                                <div class="single_comment_image_left">
+                                                    <img src="assets/images/comment.png" alt="" />
+                                                </div>
+                                                <div class="single_comment_content_right">
+                                                    <p class="robotolight">“By switching to diets that exclude animal products, we could save 3.1 billion hectares of land that would otherwise go toward the raising of livestock, a 76% decrease in food-related land use.”</p>
+                                                    <a href="https://science.sciencemag.org/content/360/6392/987"><h4><span class="separator4"></span> science.sciencemag.org</h4></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="single_comment">
+                                        <div class="row">
+                                            <div class="col-sm-8 col-sm-offset-2">
+                                                <div class="single_comment_image_left">
+                                                    <img src="assets/images/comment.png" alt="" />
+                                                </div>
+                                                <div class="single_comment_content_right">
+                                                    <p class="robotolight">“Our current chain of food supply is responsible for 26% of man-made greenhouse gas emissions, or 13.7 billion metric tons per year.”</p>
+                                                    <a href="https://science.sciencemag.org/content/360/6392/987"><h4><span class="separator4"></span> sciencemag.org</h4></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
             <section id="team" class="team">
                 <div class="container">
                     <div class="row">
@@ -332,12 +333,6 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                                     <div class="single_team">
                                         <div class="single_team_img">
                                             <img src="assets/img/austen.jpg" alt="" />
-                                            <div class="single_team_overlay all_overlay">
-                                                <a href=""><i class="fa fa-facebook"></i></a>
-                                                <a href=""><i class="fa fa-twitter"></i></a>
-                                                <a href=""><i class="fa fa-pinterest-p"></i></a>
-                                                <a href=""><i class="fa fa-instagram"></i></a>
-                                            </div>
                                         </div>
                                         <div class="single_team_content">
                                             <h5>Austen Liao</h5>
@@ -348,12 +343,6 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                                     <div class="single_team">
                                         <div class="single_team_img">
                                             <img src="assets/img/amishapic.png" alt="" />
-                                            <div class="single_team_overlay all_overlay">
-                                                <a href=""><i class="fa fa-facebook"></i></a>
-                                                <a href=""><i class="fa fa-twitter"></i></a>
-                                                <a href=""><i class="fa fa-pinterest-p"></i></a>
-                                                <a href=""><i class="fa fa-instagram"></i></a>
-                                            </div>
                                         </div>
                                         <div class="single_team_content">
                                             <h5>Amisha Jain</h5>
@@ -365,12 +354,6 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                                     <div class="single_team">
                                         <div class="single_team_img">
                                             <img src="assets/img/sandwich.jpg" alt="" />
-                                            <div class="single_team_overlay all_overlay">
-                                                <a href=""><i class="fa fa-facebook"></i></a>
-                                                <a href=""><i class="fa fa-twitter"></i></a>
-                                                <a href=""><i class="fa fa-pinterest-p"></i></a>
-                                                <a href=""><i class="fa fa-instagram"></i></a>
-                                            </div>
                                         </div>
                                         <div class="single_team_content">
                                             <h5>Samik Pradhan</h5>
