Got rid of images folder

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                             <div class="col-sm-6">
                                 <div class="single_doservice">
                                     <div class="single_doservice_img">
-                                        <img src="assets/images/doservice.jpg" alt="" />
+                                        <img src="assets/img/doservice.jpg" alt="" />
                                     </div>
                                 </div>
                             </div>
@@ -273,7 +273,7 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                                         <div class="row">
                                             <div class="col-sm-8 col-sm-offset-2">
                                                 <div class="single_comment_image_left">
-                                                    <img src="assets/images/comment.png" alt="" />
+                                                    <img src="assets/img/comment.png" alt="" />
                                                 </div>
                                                 <div class="single_comment_content_right">
                                                     <p class="robotolight">“One rather obscure way to reduce your dietary carbon footprint is to avoid purchasing air-freighted food products. These products can be responsible for 50 times more CO2eq emissions than their boat-transported counterparts.”</p>
