Got rid of more unnecessary code

--- a/index.html
+++ b/index.html
@@ -63,8 +63,6 @@
 
                                         <!-- Collect the nav links, forms, and other content for toggling -->
 
-
-
                                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                                             <ul class="nav navbar-nav navbar-right">
@@ -90,9 +88,6 @@
             </header> <!--End of header -->
 
 
-
-
-
             <section id="home" class="home">
                 <div class="overlay all_overlay">
                     <div class="container">
@@ -106,11 +101,8 @@
 
                                             <div class="whiteseparator"></div>
 
-
                                         </div>
                                     </div>
-
-
                                             <div class="home_btn">
                                                 <a href="" class="btn btn-primary">LEARN MORE</a>
                                             </div>
@@ -123,10 +115,6 @@
                     </div>
                 </div>
             </section>
-
-
-
-
 
             <section id="about" class="about">
                 <div class="container">
@@ -173,8 +161,6 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                     </div>
                 </div>
             </section>
-
-
 
             <section id="doservice" class="doservice">
                 <div class="container">
@@ -260,9 +246,6 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                 </div>
             </section>
 
-
-
-
             <section id="comment" class="comment">
                 <div class="container">
                     <div class="row">
@@ -273,12 +256,11 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                                         <div class="row">
                                             <div class="col-sm-8 col-sm-offset-2">
                                                 <div class="single_comment_image_left">
-                                                    <img src="assets/img/comment.png" alt="" />
+                                                    <img src="assets/img/comment.png" alt="comment icon" />
                                                 </div>
                                                 <div class="single_comment_content_right">
                                                     <p class="robotolight">“One rather obscure way to reduce your dietary carbon footprint is to avoid purchasing air-freighted food products. These products can be responsible for 50 times more CO2eq emissions than their boat-transported counterparts.”</p>
                                                     <a href="https://ourworldindata.org/food-choice-vs-eating-local"><h4><span class="separator4"></span> ourworldindata.org</h4></a>
-
                                                 </div>
                                             </div>
                                         </div>
@@ -287,7 +269,7 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                                         <div class="row">
                                             <div class="col-sm-8 col-sm-offset-2">
                                                 <div class="single_comment_image_left">
-                                                    <img src="assets/images/comment.png" alt="" />
+                                                    <img src="assets/images/comment.png" alt="comment icon" />
                                                 </div>
                                                 <div class="single_comment_content_right">
                                                     <p class="robotolight">“By switching to diets that exclude animal products, we could save 3.1 billion hectares of land that would otherwise go toward the raising of livestock, a 76% decrease in food-related land use.”</p>
@@ -300,7 +282,7 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                                         <div class="row">
                                             <div class="col-sm-8 col-sm-offset-2">
                                                 <div class="single_comment_image_left">
-                                                    <img src="assets/images/comment.png" alt="" />
+                                                    <img src="assets/images/comment.png" alt="comment icon" />
                                                 </div>
                                                 <div class="single_comment_content_right">
                                                     <p class="robotolight">“Our current chain of food supply is responsible for 26% of man-made greenhouse gas emissions, or 13.7 billion metric tons per year.”</p>
@@ -325,7 +307,6 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                                 <h4 class="subtitle">Who we are</h4>
                                 <h2>Meet our team</h2>
                                 <div class="separator"></div>
-
                             </div>
 
                             <div class="main_team_content text-center">
@@ -347,7 +328,6 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                                         <div class="single_team_content">
                                             <h5>Amisha Jain</h5>
                                         </div>
-
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
@@ -358,7 +338,6 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                                         <div class="single_team_content">
                                             <h5>Samik Pradhan</h5>
                                         </div>
-
                                     </div>
                                 </div>
                             </div>
@@ -366,7 +345,6 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                     </div>
                 </div>
             </section>
-
 
             <section id="contact" class="footer_widget">
                 <div class="container">
@@ -381,7 +359,6 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                             </div>
 
                             <div class="col-sm-8">
-
 
                                     <div class="col-sm-5 col-xs-12">
                                         <div class="single_widget wow fadeIn" data-wow-duration="800ms">
@@ -399,10 +376,6 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                     </div>
                 </div>
             </section>
-
-
-
-
 
             <footer id="footer" class="footer">
                 <div class="container">
@@ -428,31 +401,11 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
 
         <script src="assets/js/vendor/jquery-1.11.2.min.js"></script>
         <script src="assets/js/vendor/bootstrap.min.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 
         <script src="assets/js/jquery.mixitup.min.js"></script>
         <script src="assets/js/jquery.easing.1.3.js"></script>
         <script src="assets/js/jquery.masonry.min.js"></script>
         <script src="assets/js/jquery.fancybox.pack.js"></script>
-        <!--This is link only for gmaps-->
-        <script src="http://maps.google.com/maps/api/js"></script>
-        <script src="assets/js/gmaps.min.js"></script>
-
-
-        <script>
-
-                                            function showmap() {
-                                                var mapOptions = {
-                                                    zoom: 8,
-                                                    scrollwheel: false,
-                                                    center: new google.maps.LatLng(-34.397, 150.644),
-                                                    mapTypeId: google.maps.MapTypeId.ROADMAP
-                                                };
-                                                var map = new google.maps.Map(document.getElementById('map_canvas'), mapOptions);
-                                            }
-
-        </script>
-
 
         <script src="assets/js/plugins.js"></script>
         <script src="assets/js/main.js"></script>
