--- a/index.html
+++ b/index.html
@@ -207,10 +207,7 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                                                 </div>
                                                 <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                                                     <div class="panel-body">
-                                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                                                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                                                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                                        The Mediterranean diet is based on the traditional foods that people used to eat in countries like Italy and Greece back in 1960. It is not a strict diet, only specifing the foods that you should avoid eating. The medditeranean diet recommends that the diet mainly consist of Vegetables, fruits, nuts, seeds, legumes, potatoes, whole grains, breads, herbs, spices, fish, seafood and extra virgin olive oil. Poultry, eggs, cheese and yogurt should be eaten in moderation and red meat should be rarely consumed. The medditeranean diet restricts the person from eating sugar-sweetened beverages, added sugars, processed meat, refined grains, refined oils and other highly processed foods, keeping the person on a very natural diet.
                                                     </div>
                                                 </div>
                                             </div>
