--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                                 <h4 class="subtitle">Learn about</h4>
                                 <h2>Types of Diets</h2>
                                 <div class="separator"></div>
-                                <p>To quickly decrease your carbon footprint, these are some potential diets that you adopt. </p>
+                                <p>To quickly decrease your carbon footprint, these are some potential diets that you can adopt. </p>
                             </div>
                             <div class="col-sm-6">
                                 <div class="single_doservice">
