Updated repl.it link

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                                         <div class="separator"></div>
                                     </div>
 
-                                    <iframe height="700px" width="100%" src="https://repl.it/@yosemine/AustereReadyLivedistro?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+                                    <iframe height="700px" width="100%" src="https://repl.it/@appoxalypse/Foodprint?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
                                 </div>
                             </div>
                         </div>
