Changed file reference to fit location of file

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                                         <div class="row">
                                             <div class="col-sm-8 col-sm-offset-2">
                                                 <div class="single_comment_image_left">
-                                                    <img src="assets/images/comment.png" alt="comment icon" />
+                                                    <img src="assets/img/comment.png" alt="comment icon" />
                                                 </div>
                                                 <div class="single_comment_content_right">
                                                     <p class="robotolight">“By switching to diets that exclude animal products, we could save 3.1 billion hectares of land that would otherwise go toward the raising of livestock, a 76% decrease in food-related land use.”</p>
@@ -277,7 +277,7 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                                         <div class="row">
                                             <div class="col-sm-8 col-sm-offset-2">
                                                 <div class="single_comment_image_left">
-                                                    <img src="assets/images/comment.png" alt="comment icon" />
+                                                    <img src="assets/img/comment.png" alt="comment icon" />
                                                 </div>
                                                 <div class="single_comment_content_right">
                                                     <p class="robotolight">“Our current chain of food supply is responsible for 26% of man-made greenhouse gas emissions, or 13.7 billion metric tons per year.”</p>
