--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                                                 </div>
                                                 <div class="single_comment_content_right">
                                                     <p class="robotolight">“By switching to diets that exclude animal products, we could save 3.1 billion hectares of land that would otherwise go toward the raising of livestock, a 76% decrease in food-related land use.”</p>
-                                                    <a href="https://science.sciencemag.org/content/360/6392/987"><h4><span class="separator4"></span> science.sciencemag.org</h4></a>
+                                                    <a href="https://science.sciencemag.org/content/360/6392/987"><h4><span class="separator4"></span> sciencemag.org</h4></a>
                                                 </div>
                                             </div>
                                         </div>
