Fixed mislabeled link

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                             <ul class="nav navbar-nav navbar-right">
                                                 <li><a href="#home">Home</a></li>
                                                 <li><a href="#about">About us</a></li>
-                                                <li><a href="#service">Service</a></li>
+                                                <li><a href="#service">Foodprint</a></li>
                                                 <li><a href="#doservice">Diets</a></li>
                                                 <li><a href="#team">Who we are</a></li>
                                                 <li><a href="#contact">Contact us</a></li>
