Fixed a typo and a grammatical mistake

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <div class="main_about_area sections text-left">
                             <div class="col-sm-10 col-sm-offset-1">
                                 <div class="head_title text-center">
-                                    <h4 class="subtitle">what we do?</h4>
+                                    <h4 class="subtitle">What we do</h4>
                                     <h2>About this project</h2>
                                     <div class="separator"></div>
                                     <p><b>13.7 billion metric tons.</b> <br>
@@ -148,10 +148,9 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                                 <div class="row">
                                     <div class="head_title text-center">
                                         <h4 class="subtitle">Begin using</h4>
-                                        <h2>Footprint</h2>
+                                        <h2>Foodprint</h2>
                                         <div class="separator"></div>
                                     </div>
-
                                     <iframe height="700px" width="100%" src="https://repl.it/@appoxalypse/Foodprint?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
                                 </div>
                             </div>
