--- a/index.html
+++ b/index.html
@@ -204,10 +204,8 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                                                 </div>
                                                 <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                                                     <div class="panel-body">
-                                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                                                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                                                        ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                                                        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                                        The vegetarian diet consists of eating no meat, fish and poultry whatsoever. Those who follow this diet do, however, consume eggs and dairy products.
+
                                                     </div>
                                                 </div>
                                             </div>
@@ -221,11 +219,7 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                                                 </div>
                                                 <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
                                                     <div class="panel-body">
-                                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                                                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                                                        ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                                                        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                                                        culpa qui officia deserunt mollit anim id est laborum.
+                                                        The vegan diet is similar to the vegetarian diet, but prohibits the consumption of all animal products including eggs and dairy. 
                                                     </div>
                                                 </div>
                                             </div>
